Fixed the userbar so the last user does not get cut off

--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -22,7 +22,7 @@
 }
 
 .photoFeed ul {
-  padding-right: 8%;
+  padding-right: 5%;
   padding-left: 10%;
   width: 100%;
   overflow-y: auto;
